# Cybersecurity-Projects

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  SECURITY.md  checklist.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: eslint-check.yml  lint.yml  publish-api-rate-limter.yml  publish-base64-tool.yml  publish-caesar-cipher.yml  publish-dns-lookup.yml  publish-network-traffic-analyzer.yml  publish.yml  test.yml  typescript-check.yml  update-submodule.yml
PROJECTS/Aenebris/: .gitignore  LICENSE  README.md  WHITEPAPER  aenebris.cabal
PROJECTS/Aenebris/.angela/: NEXT_websockets-prep.md
PROJECTS/Aenebris/app/: Main.hs
PROJECTS/Aenebris/docs/proxy-haskell-research/: config-design.md  ddos-mitigation.md  http2-http3.md  load-balancing.md  performance-optimization.md
PROJECTS/Aenebris/docs/research/: deployment.md  haskell-networking.md  rate-limiting.md  tls-ssl.md
PROJECTS/Aenebris/examples/: config.yaml  test_backend.py
PROJECTS/Aenebris/src/: Main.hs
PROJECTS/Aenebris/src/Aenebris/: Config.hs  Proxy.hs
PROJECTS/advanced/Aenebris/: README.md
PROJECTS/advanced/api-rate-limiter/: README.md  pyproject.toml
PROJECTS/advanced/api-rate-limiter/examples/: app.py
PROJECTS/advanced/api-rate-limiter/learn/: 00-OVERVIEW.md  architecture.md  security.md
PROJECTS/advanced/api-rate-limiter/tests/: conftest.py  test_algorithms.py  test_integration.py  test_limiter.py  test_storage.py  test_types.py
PROJECTS/advanced/bug-bounty-platform/: LICENSE  dev.compose.yml
PROJECTS/advanced/bug-bounty-platform/backend/: pyproject.toml
PROJECTS/advanced/bug-bounty-platform/frontend/: biome.json  package.json  pnpm-lock.yaml
PROJECTS/advanced/encrypted-p2p-chat/: .gitignore  README.md  compose.yml  dev.compose.yml  justfile
PROJECTS/advanced/encrypted-p2p-chat/backend/: pyproject.toml
PROJECTS/advanced/encrypted-p2p-chat/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/api-rate-limiter/: README.md  pyproject.toml
PROJECTS/api-rate-limiter/src/fastapi_420/: __init__.py  config.py  dependencies.py  limiter.py  (+3 more)
PROJECTS/api-rate-limiter/tests/: conftest.py  test_algorithms.py  test_fingerprinting.py  test_storage.py  test_types.py
PROJECTS/api-security-scanner/backend/: Makefile  __init__.py  config.py  main.py  pyproject.toml
PROJECTS/api-security-scanner/frontend/: .prettierrc.json  package-lock.json  package.json
PROJECTS/beginner/base64-tool/: README.md
PROJECTS/beginner/c2-beacon/: README.md
PROJECTS/beginner/caesar-cipher/: README.md
PROJECTS/beginner/dns-lookup/: README.md
PROJECTS/beginner/keylogger/: README.md  justfile  keylogger.py  pyproject.toml  test_keylogger.py
PROJECTS/beginner/metadata-scrubber-tool/: .yapfignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PROJECTS/beginner/network-traffic-analyzer/: .gitignore
PROJECTS/beginner/simple-port-scanner/: README.md
PROJECTS/beginner/simple-vulnerability-scanner/: .golangci.yml  Justfile  README.md
PROJECTS/bug-bounty-platform/: README.md
PROJECTS/docker-security-audit/: Makefile  README.md  go.mod  go.sum
PROJECTS/docker-security-audit/learn/: codebase-guide.md
PROJECTS/encrypted-p2p-chat/: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml
PROJECTS/encrypted-p2p-chat/backend/: pyproject.toml
PROJECTS/encrypted-p2p-chat/frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
PROJECTS/keylogger/: keylogger.py  pyproject.toml
PROJECTS/simple-vulnerability-scanner/: .gitignore  Justfile  README.md  go.mod  go.sum
PROJECTS/simple-vulnerability-scanner/learn/: GO-CONCURRENCY-PATTERNS.md  PEP440-VERSION-PARSING.md  TOML-COMMENT-PRESERVATION.md
PROJECTS/simple-vulnerability-scanner/testdata/: pyproject.toml
ROADMAPS/: APPLICATION-SECURITY.md  CLOUD-SECURITY-ENGINEER.md  GRC-ANALYST.md  INCIDENT-RESPONDER.md  NETWORK-ENGINEER.md  PENTESTER.md  README.md  SECURITY-ARCHITECT.md  SECURITY-ENGINEER.md  SOC-ANALYST.md  THREAT-INTELLIGENCE-ANALYST.md
api-security-scanner/: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  package.json
api-security-scanner/.github/workflows/: eslint-check.yml  lint.yml  typescript-check.yml
api-security-scanner/backend/: Makefile  __init__.py  config.py  factory.py  main.py  pyproject.toml  requirements.txt
api-security-scanner/backend/core/: __init__.py  database.py  dependencies.py  enums.py  security.py
api-security-scanner/backend/models/: Base.py  Scan.py  TestResult.py  User.py
api-security-scanner/backend/repositories/: __init__.py  scan_repository.py  test_result_repository.py  user_repository.py
api-security-scanner/backend/routes/: __init__.py  auth.py  scans.py
api-security-scanner/backend/scanners/: __init__.py  auth_scanner.py  base_scanner.py  idor_scanner.py  payloads.py  rate_limit_scanner.py  sqli_scanner.py
api-security-scanner/backend/schemas/: __init__.py  scan_schemas.py  test_result_schemas.py  user_schemas.py
api-security-scanner/backend/services/: auth_service.py  scan_service.py
api-security-scanner/conf/nginx/: dev.nginx  http.conf  prod.nginx
api-security-scanner/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
api-security-scanner/frontend/src/: App.tsx  main.tsx  router.tsx
scripts/: generate_png_tests.py
src/: main.py
src/commands/: read.py  verify.py
src/core/: jpeg_metadata.py  png_metadata.py
src/services/: excel_handler.py  image_handler.py  metadata_factory.py  metadata_handler.py  pdf_handler.py  powerpoint_handler.py
src/utils/: display.py  exceptions.py  formatter.py  get_target_files.py  logger.py
tests/: conftest.py
tests/e2e/: test_read_command.py  test_scrub_command.py
tests/integration/: test_metadata_factory.py
tests/unit/: test_excel_handler.py  test_image_handler.py  test_pdf_handler.py  test_powerpoint_handler.py
(+299 files in other folders)
